# obs-common

./: .dockerignore  .gitignore  GRAVEYARD.md  Makefile  README.md  docker-compose.yml  justfile  pyproject.toml  requirements.in  requirements.txt
.devcontainer/: Dockerfile  devcontainer.json
.github/: dependabot.yml
.github/workflows/: build.yaml
docker/: Dockerfile
docker/config/: local_dev.env
docker/images/fakesentry/: Dockerfile
docker/images/gcs-emulator/: Dockerfile
docker/images/pubsub-emulator/: Dockerfile
obs_common/: gcs_cli.py  license_check.py  pubsub_cli.py  release.py  service_status.py  waitfor.py
tests/: test_gcs_cli.py  test_license_check.py  test_service_status.py  test_waitfor.py
