[project]
name = "obs-common"
version = "1.0"  # Will be overridden with the actual version in CI builds.
description = "code shared between Mozilla crash ingestion repositories"
license = "MPL-2.0"
license-files = ["LICENSE"]
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "click",
    "google-cloud-pubsub",
    "google-cloud-storage",
    "sentry-sdk",
]

[dependency-groups]
dev = [
    "ipython",
    "pytest",
    "requests",
    "ruff"
]

[project.scripts]
license-check = "obs_common.license_check:main"
service-status = "obs_common.service_status:main"
gcs-cli = "obs_common.gcs_cli:gcs_group"
pubsub-cli = "obs_common.pubsub_cli:pubsub_group"
sentry-wrap = "obs_common.sentry_wrap:cli_main"
waitfor = "obs_common.waitfor:main"

[build-system]
requires = ["uv_build>=0.10.9,<0.11.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "obs_common"
module-root = ""

[[tool.uv.index]]
name = "cavendish"
url = "https://us-python.pkg.dev/moz-fx-cavendish-prod/cavendish-prod-python/simple/"
publish-url = "https://us-python.pkg.dev/moz-fx-cavendish-prod/cavendish-prod-python/"

[tool.ruff]
line-length = 88
src = ["src", "tests"]
target-version = "py311"

[tool.ruff.lint]
# Enable pycodestyle (E), pyflakes (F), bugbear (B), and bandit (S) rules
select = ["E", "F", "B", "S"]

ignore = ["E501"]

[tool.ruff.lint.flake8-quotes]
docstring-quotes = "double"

[tool.ruff.lint.per-file-ignores]
"obs_common/license_check.py" = ["S603", "S607"]
"obs_common/release.py" = ["S603", "S607"]
"obs_common/sentry_wrap.py" = ["S603"]
"obs_common/waitfor.py" = ["S310"]
"tests/**/*.py" = ["S101", "S603"]


[tool.pytest.ini_options]
filterwarnings = [
    "error",
]
